Funcionalidades da tela de cadastro de usuários.

--- a/templates/View/footer.html
+++ b/templates/View/footer.html
@@ -1,7 +1,7 @@
 <footer class="d-flex flex-wrap justify-content-between align-items-center px-5 py-3 my-4 mb-0 border-top fixed-bottom">
-    <p class="col-md mb-0 text-body-secondary-wite text-start ms-5">&copy; 2025-{{ "now"|date("Y") }} - {{ constant('SITE_DESCRIPTION') }}</p>
+    <p class="col-md mb-0 text-body-secondary-wite text-start ms-5">&copy; 2025 - {{ constant('SITE_DESCRIPTION') }}</p>
 
-    <a href="https://github.com/gpereira86" target="_blank" class="me-5">
+    <a href="https://github.com/gpereira86" target="_blank" class="me-5 text-decoration-none">
         <i class="fa-brands fa-github"></i>&nbsp; Glauco Pereira
     </a>
 </footer>
