--- a/templates/View/header.html
+++ b/templates/View/header.html
@@ -1,8 +1,10 @@
-<header class="ms-3 pt-1">
+<header class="pt-1">
 
-    <h3 class="pt-2">
-        <img class="img-fluid pb-2" src="https://maxiprod.com.br/wp-content/uploads/2023/05/Icone-p-Wordpress-512-%C3%97-512-px-150x150.png" alt="">
-        <span class="fw-bolder"> {{constant('SITE_NAME')}}</span>
-    </h3>
+    <div class="mx-5">
+        <h3 class="ms-5 pt-2 ">
+            <img class="img-fluid pb-2" src="https://maxiprod.com.br/wp-content/uploads/2023/05/Icone-p-Wordpress-512-%C3%97-512-px-150x150.png" alt="">
+            <span class="fw-bolder"> {{constant('SITE_NAME')}}</span>
+        </h3>
+    </div>
 
 </header>
