--- a/templates/Assets/css/style.css
+++ b/templates/Assets/css/style.css
@@ -16,10 +16,10 @@ header {
 
     @media (max-width: 768px) {
         h3 {
-            font-size: 1.2rem; /* Reduz tamanho do texto */
+            font-size: 1.2rem;
         }
         .logo {
-            width: 50px; /* Reduz a imagem */
+            width: 50px;
             height: auto;
         }
     }
@@ -27,6 +27,24 @@ header {
 
 header img {
     width: 2.2rem;
+}
+
+footer {
+    margin: 0;
+    padding: 0;
+    color: black;
+    background-color: #ECECEC;
+
+}
+
+footer a{
+    color: black;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+
+    &:hover{
+        color: #297C07;
+    }
 }
 
 .table thead tr {
@@ -66,6 +84,10 @@ header img {
         background-color: #da4242;
     }
 
+    &.success {
+        background-color: #297C07;
+    }
+
 }
 
 .custom-primary-button:hover {
@@ -78,6 +100,10 @@ header img {
 
     &.danger {
         background-color: #e18787;
+    }
+
+    &.success {
+        background-color: #7fdf5c;
     }
 
 }
