--- a/templates/View/404.html
+++ b/templates/View/404.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'partials/base.html'%}
 
 {% block content %}
 
@@ -10,12 +10,12 @@
 
             {{flash}}
 
-            <div class="text-center">
-                <img class="img-fluid pt-2" src="{{ url('templates/site/assets/img/404.png') }}" alt="alt" style="max-width: 30%; max-height: 30%;"/>
-                <p style="margin-top: -1rem;">
-                    <a class="text-decoration-none" href="http://www.freepik.com" style="font-size: 0.7rem; color: inherit;">Designed by Freepik</a>
-                </p>
-            </div>
+<!--            <div class="text-center">-->
+<!--                <img class="img-fluid pt-2" src="{{ url('templates/site/assets/img/404.png') }}" alt="alt" style="max-width: 30%; max-height: 30%;"/>-->
+<!--                <p style="margin-top: -1rem;">-->
+<!--                    <a class="text-decoration-none" href="http://www.freepik.com" style="font-size: 0.7rem; color: inherit;">Designed by Freepik</a>-->
+<!--                </p>-->
+<!--            </div>-->
 
             <h2 class="text-center pt-3" >
                 <a class="text-decoration-none" href="{{url('/')}}" style="color: inherit;">
