--- a/templates/Assets/css/style.css
+++ b/templates/Assets/css/style.css
@@ -10,23 +10,25 @@ body{
 
 header {
     margin: 15px 0;
+    color: #737373;
     background-color: #FFFFFF;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.03);
     border-bottom: 1px solid #dddddd;
 
     @media (max-width: 768px) {
-        h3 {
-            font-size: 1.2rem;
+        h4, .custom-menu-size{
+            font-size: 1.1rem;
+            margin: 0;
         }
         .logo {
-            width: 50px;
+            width: 25px;
             height: auto;
         }
     }
 }
 
 header img {
-    width: 2.2rem;
+    width: 1.7rem;
 }
 
 footer {
@@ -45,6 +47,79 @@ footer a{
     &:hover{
         color: #297C07;
     }
+}
+
+nav.navbar {
+    position: relative;
+    width: auto;
+}
+
+.navbar-collapse {
+    position: absolute;
+    padding-left: 10px;
+    top: 100%;
+    right: 0;
+    width: 190px;
+    background-color: #fff;
+    z-index: 999;
+    box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.1);
+    transform: translateX(100%);
+    transition: transform 0.3s ease-out;
+}
+
+.navbar-collapse.show {
+    transform: translateX(0);
+}
+
+.navbar-nav a {
+    position: relative;
+    transition: color 0.3s;
+}
+
+.custom-active{
+    color: #18A6D8;
+}
+
+
+@media (min-width: 768px) {
+
+    .navbar-collapse {
+        position: relative;
+        transform: none;
+        box-shadow: none;
+        width: auto;
+    }
+
+    .navbar-nav {
+        display: flex;
+        justify-content: flex-start;
+        font-size: 1.2rem;
+        width: auto;
+
+    }
+
+    .navbar-nav a::after {
+        content: '';
+        position: absolute;
+        bottom: 5px;
+        left: 50%;
+        width: 70%;
+        height: 2px;
+        background-color: #18A6D8;
+        transform: translateX(-50%) translateY(5px);
+        opacity: 0;
+        transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+    }
+
+    .navbar-nav a:hover {
+        color: #18A6D8;
+    }
+
+    .navbar-nav a:hover::after {
+        transform: translateX(-50%) translateY(0);
+        opacity: 1;
+    }
+
 }
 
 .table thead tr {
@@ -106,4 +181,13 @@ footer a{
         background-color: #7fdf5c;
     }
 
+}
+
+.custom-gray-bg-color {
+    background-color: #ECECEC;
+}
+
+.error-404 {
+    font-size: 10rem;
+    color: lightgray;
 }
