--- a/templates/View/404.html
+++ b/templates/View/404.html
@@ -3,26 +3,26 @@
 {% block content %}
 
 <div class="d-flex justify-content-center align-items-center vh-75">
-    <div class="p-4 border">
-
-
-            <h1 class="text-center pb-3">Página não encontrada</h1>
+    <div class="p-4">
 
             {{flash}}
 
-<!--            <div class="text-center">-->
-<!--                <img class="img-fluid pt-2" src="{{ url('templates/site/assets/img/404.png') }}" alt="alt" style="max-width: 30%; max-height: 30%;"/>-->
-<!--                <p style="margin-top: -1rem;">-->
-<!--                    <a class="text-decoration-none" href="http://www.freepik.com" style="font-size: 0.7rem; color: inherit;">Designed by Freepik</a>-->
-<!--                </p>-->
-<!--            </div>-->
+        <main id="page-content" class="d-flex justify-content-center align-items-center" style="min-height: 65vh;">
+            <div class="text-center">
+                <h1 class="fw-bold text-primary">Página não encontrada</h1>
+                <h1 class="error-404">404</h1>
+                <p class="text-secondary mt-3">O link que você seguiu deve estar quebrado ou a página pode ter sido removida.</p>
+            </div>
+        </main>
 
-            <h2 class="text-center pt-3" >
-                <a class="text-decoration-none" href="{{url('/')}}" style="color: inherit;">
-                    <button type="button" class="btn btn-outline-dark btn-lg">Voltar para página inicial</button>
-                </a>
-            </h2>
-
+        <style>
+            .text-primary {
+                color: #1783a4 !important;
+            }
+            .text-secondary {
+                color: #343a40 !important;
+            }
+        </style>
 
     </div>
 </div>
