--- a/templates/View/index.html
+++ b/templates/View/index.html
@@ -4,10 +4,93 @@
 
 <h1>Members</h1>
 {{ flash() }}
-<ul>
 
-    <li>{{ teste }}</li>
+<form action="{{ url() }}" method="POST" class="mb-4" style="max-width: 400px;">
+    <select class="form-select form-control" aria-label="Default select example" name="filtro" id="userFilter" onchange="this.form.submit()">
+        <option value="TODOS" {% if person.id == formData.filtro %}selected{% endif %}>TODOS</option>
 
-</ul>
+        {% for person in persons %}
+        <option value="{{ person.id }}" {% if person.id == formData.filtro %}selected{% endif %}>
+            {{ person.name }}
+        </option>
+        {% endfor %}
+    </select>
+</form>
+
+<div class="container mb-4">
+    <div class="row">
+        <div class="col text-center">
+            <h4>Transações Cadastradas</h4>
+            <h1>{{ totalTransactions }}</h1>
+        </div>
+        <div class="col text-center">
+            <h4>Pessoas Cadastradas</h4>
+            <h1>{{ totalPersons }}</h1>
+        </div>
+        {% if personFilter.name is defined %}
+        <div class="col text-center">
+            <h4>Transações Cadastradas {{ personFilter.name }}</h4>
+            <h1>{{ totalUserTransactions }}</h1>
+        </div>
+        {% endif %}
+    </div>
+
+</div>
+
+
+<div class="container mt-2 mb-5 overflow-y-auto">
+    <hr class="custom-gray-line">
+    <h4 class="text-center my-2 fw-bolder">Transações Cadastradas {{ personFilter.name is defined ? 'de ' ~ personFilter.name : ''}}</h4>
+
+    <div class="table-responsive">
+        <table class="table align-middle custom-table-header mt-3">
+            <thead class="table-light text-center">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Nome da Transação</th>
+                <th scope="col">Tipo de Custo</th>
+                <th scope="col">Custo</th>
+                <th scope="col">Usuário</th>
+                <th scope="col">Comentário</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for transaction in transactions %}
+            <tr>
+                <td class="col-sm text-center">{{transaction.id}}</td>
+                <td class="col-sm ps-5">{{transaction.expense_name}}</td>
+                <td class="col-sm text-center">{{transaction.cost_type}}</td>
+                <td class="col-sm text-center">{{transaction.cost}}</td>
+
+
+                {% set found = false %}
+
+                {% for person in persons %}
+                {% if person.id == transaction.people_id %}
+                <td class="col-sm text-center">
+                    {{ person.name }}
+                </td>
+                {% set found = true %}
+                {% endif %}
+                {% endfor %}
+
+                {% if not found %}
+                <td class="col-sm text-center">
+                    Não localizado
+                </td>
+                {% endif %}
+
+
+                <td class="col-sm text-center">{{transaction.notes is empty ? ' --- ' : transaction.notes}}</td>
+
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+
+
+</div>
 
 {% endblock %}
