--- a/templates/View/people-form.html
+++ b/templates/View/people-form.html
@@ -69,7 +69,7 @@
                             <td class="col-sm-7 ps-5">{{person.name}}</td>
                             <td class="col-sm-2 text-center">{{person.age}}</td>
 
-                            <td class="col-sm-2 text-center">
+                            <td class="col-sm text-center">
                                 <a href="{{ url('editar-pessoa/' ~ person.id) }}" class="d-inline-block text-decoration-none custom-primary-button warning">
                                     <i class="fa-regular fa-pen-to-square"></i>
                                     <span class="d-none d-sm-inline">Editar</span>
