--- a/templates/View/transaction-form.html
+++ b/templates/View/transaction-form.html
@@ -82,13 +82,21 @@
                 Salvar
                 {% endif %}
             </button>
+
+
+                {% if not formData.id %}
+                    <button class="btn btn-secondary mt-3" type="reset" onclick="window.location.reload()">
+                        limpar Formulário
+                {% else %}
+                    <button class="btn btn-secondary mt-3" type="reset" onclick="window.location.href='{{ url('cadastrar-transacao') }}'">
+                        cancelar
+                {% endif %}
+                    </button>
+
         </div>
     </form>
-
-
-
-
 </div>
+
 
 <div class="container mt-2 mb-5">
     <hr class="custom-gray-line">
@@ -113,7 +121,7 @@
                         <td class="col-sm text-center">{{transaction.id}}</td>
                         <td class="col-sm ps-5">{{transaction.expense_name}}</td>
                         <td class="col-sm text-center">{{transaction.cost_type}}</td>
-                        <td class="col-sm text-center">{{transaction.cost}}</td>
+                        <td class="col-sm text-center">{{ 'R$ ' ~ transaction.cost|replace({',': '.'})|number_format(2, ',', '.') }}</td>
 
 
                         {% set found = false %}
