--- a/templates/view/total.html
+++ b/templates/view/total.html
@@ -16,7 +16,7 @@
         <table class="table align-middle mt-3">
             <thead class="text-center">
             <tr>
-                <th scope="col">Usuário</th>
+                <th scope="col">Pessoa</th>
                 <th scope="col">Idade</th>
                 <th scope="col">Receitas</th>
                 <th scope="col">Despesas</th>
@@ -68,7 +68,7 @@
         </table>
     </div>
     <div class="text-danger text-end fw-semibold">
-        <p>* Valores de despesa ou negativos são representados pela cor vermelha e exibição entre parênteses.</p>
+        <p>* Despesas e saldos negativos são exibidos entre parênteses e coloração da letra em vermelho.</p>
     </div>
 </div>
 
